--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "@babel/preset-typescript": "^7.10.4",
     "@types/jest": "^26.0.14",
     "@types/react-dom": "^16.9.8",
+    "@types/react-redux": "^7.1.9",
     "@types/react-test-renderer": "^16.9.3",
+    "@types/redux": "^3.6.0",
     "babel-jest": "^26.5.2",
     "babel-loader": "^8.1.0",
     "css-loader": "^4.3.0",
@@ -47,6 +49,8 @@
     "core-js": "^3.6.5",
     "mini-css-extract-plugin": "^1.0.0",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "react-redux": "^7.2.1",
+    "redux": "^4.0.5"
   }
 }
