--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/jest": "^26.0.14",
     "@types/react-dom": "^16.9.8",
     "@types/react-redux": "^7.1.9",
+    "@types/react-router-dom": "^5.1.6",
     "@types/react-test-renderer": "^16.9.3",
     "@types/redux": "^3.6.0",
     "babel-jest": "^26.5.2",
@@ -51,6 +52,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.1",
+    "react-router-dom": "^5.2.0",
     "redux": "^4.0.5"
   }
 }
