Added weather by city (not finished)

--- a/.babelrc
+++ b/.babelrc
@@ -12,7 +12,10 @@
     ],
     "env": {
         "test": {
-            "plugins": ["@babel/plugin-transform-modules-commonjs"]
+            "plugins": [
+                "@babel/plugin-transform-modules-commonjs"
+            ]
         }
-    }
+    },
+    "plugins": ["transform-class-properties"]
 }
