--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "@types/redux": "^3.6.0",
     "babel-jest": "^26.5.2",
     "babel-loader": "^8.1.0",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "css-loader": "^4.3.0",
+    "dotenv": "^8.2.0",
     "file-loader": "^6.1.1",
     "html-webpack-plugin": "^4.5.0",
     "identity-obj-proxy": "^3.0.0",
@@ -53,6 +55,7 @@
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0"
   }
 }
