--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "node-sass": "^4.14.1",
     "react-test-renderer": "^16.13.1",
     "sass-loader": "^10.0.3",
+    "sass-resources-loader": "^2.1.1",
     "source-map-loader": "^1.1.1",
     "style-loader": "^2.0.0",
     "typescript": "^4.0.3",
