--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
+    "@tinymce/tinymce-react": "^3.7.0",
     "bootstrap": "^4.5.2",
     "core-js": "^3.6.5",
     "mini-css-extract-plugin": "^1.0.0",
