--- a/app/package.json
+++ b/app/package.json
@@ -50,13 +50,13 @@
     "typescript": "^4.0.3",
     "webpack": "^4.44.2",
     "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0"
+    "webpack-dev-server": "^3.11.0",
+    "mini-css-extract-plugin": "^1.0.0"
   },
   "dependencies": {
     "@tinymce/tinymce-react": "^3.7.0",
     "bootstrap": "^4.5.2",
     "core-js": "^3.6.5",
-    "mini-css-extract-plugin": "^1.0.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
