--- a/app/package.json
+++ b/app/package.json
@@ -3,11 +3,13 @@
   "version": "1.0.0",
   "license": "ISC",
   "author": "Arslanoov",
-  "description": "Weather app (React + Redux)",
+  "description": "Weather app",
   "scripts": {
     "start": "webpack-dev-server",
     "build": "webpack",
-    "test": "jest"
+    "test:unit": "jest",
+    "lint": "npx eslint . --ext .ts, .tsx --no-error-on-unmatched-pattern",
+    "lint:fix": "npx eslint . --ext .ts, .tsx --no-error-on-unmatched-pattern --fix"
   },
   "repository": {
     "type": "git",
@@ -32,15 +34,23 @@
     "@types/react-test-renderer": "^16.9.3",
     "@types/redux": "^3.6.0",
     "@types/uuid": "^8.3.0",
+    "@typescript-eslint/eslint-plugin": "^4.28.4",
     "babel-jest": "^26.5.2",
     "babel-loader": "^8.1.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "css-loader": "^4.3.0",
     "dotenv": "^8.2.0",
+    "eslint": "^7.31.0",
+    "eslint-config-airbnb-typescript": "^12.3.1",
+    "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.24.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "file-loader": "^6.1.1",
     "html-webpack-plugin": "^4.5.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^26.5.2",
+    "mini-css-extract-plugin": "^1.0.0",
     "node-sass": "^4.14.1",
     "react-test-renderer": "^16.13.1",
     "sass-loader": "^10.0.3",
@@ -50,8 +60,7 @@
     "typescript": "^4.0.3",
     "webpack": "^4.44.2",
     "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0",
-    "mini-css-extract-plugin": "^1.0.0"
+    "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
     "@tinymce/tinymce-react": "^3.7.0",
