--- a/app/package.json
+++ b/app/package.json
@@ -9,7 +9,9 @@
     "build": "webpack",
     "test:unit": "jest",
     "lint": "npx eslint . --ext .ts, .tsx --no-error-on-unmatched-pattern",
-    "lint:fix": "npx eslint . --ext .ts, .tsx --no-error-on-unmatched-pattern --fix"
+    "lint:fix": "npx eslint . --ext .ts, .tsx --no-error-on-unmatched-pattern --fix",
+    "lint:style": "stylelint \"**/*.{scss}\" --ignore-path .gitignore",
+    "lint:style:fix": "stylelint \"**/*.{scss}\" --fix --ignore-path .gitignore"
   },
   "repository": {
     "type": "git",
@@ -57,6 +59,8 @@
     "sass-resources-loader": "^2.1.1",
     "source-map-loader": "^1.1.1",
     "style-loader": "^2.0.0",
+    "stylelint": "^13.13.1",
+    "stylelint-scss": "^3.20.1",
     "typescript": "^4.0.3",
     "webpack": "^4.44.2",
     "webpack-cli": "^3.3.12",
