--- a/app/package.json
+++ b/app/package.json
@@ -1,82 +1,43 @@
 {
-  "name": "react-weather",
-  "version": "1.0.0",
-  "license": "ISC",
-  "author": "Arslanoov",
-  "description": "Weather app",
-  "scripts": {
-    "start": "webpack-dev-server",
-    "build": "webpack",
-    "test:unit": "jest",
-    "lint": "npx eslint --ext \".js,.ts,.jsx,.tsx\" --ignore-path .gitignore .",
-    "lint:fix": "npx eslint --fix --ext \".js,.ts,.jsx,.tsx\" --ignore-path .gitignore .",
-    "lint:style": "stylelint \"**/*.{scss}\" .gitignore",
-    "lint:style:fix": "stylelint \"**/*.{scss}\" .gitignore"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Arslanoov/react-weather.git"
-  },
-  "bugs": {
-    "url": "https://github.com/Arslanoov/react-weather/issues"
-  },
-  "devDependencies": {
-    "@babel/cli": "^7.11.6",
-    "@babel/core": "^7.11.6",
-    "@babel/plugin-transform-modules-commonjs": "^7.10.4",
-    "@babel/preset-env": "^7.11.5",
-    "@babel/preset-react": "^7.10.4",
-    "@babel/preset-typescript": "^7.10.4",
-    "@types/jest": "^26.0.14",
-    "@types/react-bootstrap": "^0.32.24",
-    "@types/react-dom": "^16.9.8",
-    "@types/react-redux": "^7.1.9",
-    "@types/react-router-dom": "^5.1.6",
-    "@types/react-router-redux": "^5.0.18",
-    "@types/react-test-renderer": "^16.9.3",
-    "@types/redux": "^3.6.0",
-    "@types/uuid": "^8.3.0",
-    "@typescript-eslint/eslint-plugin": "^4.28.4",
-    "babel-jest": "^26.5.2",
-    "babel-loader": "^8.1.0",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "css-loader": "^4.3.0",
-    "dotenv": "^8.2.0",
-    "eslint": "^7.31.0",
-    "eslint-config-airbnb-typescript": "^12.3.1",
-    "eslint-plugin-import": "^2.23.4",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-react": "^7.24.0",
-    "eslint-plugin-react-hooks": "^4.2.0",
-    "file-loader": "^6.1.1",
-    "html-webpack-plugin": "^4.5.0",
-    "identity-obj-proxy": "^3.0.0",
-    "jest": "^26.5.2",
-    "mini-css-extract-plugin": "^1.0.0",
-    "node-sass": "^4.14.1",
-    "react-test-renderer": "^16.13.1",
-    "sass-loader": "^10.0.3",
-    "sass-resources-loader": "^2.1.1",
-    "source-map-loader": "^1.1.1",
-    "style-loader": "^2.0.0",
-    "stylelint": "^13.13.1",
-    "stylelint-scss": "^3.20.1",
-    "typescript": "^4.0.3",
-    "webpack": "^4.44.2",
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0"
-  },
+  "name": "app",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
-    "@tinymce/tinymce-react": "^3.7.0",
-    "bootstrap": "^4.5.2",
-    "core-js": "^3.6.5",
-    "react": "^16.13.1",
-    "react-bootstrap": "^1.3.0",
-    "react-dom": "^16.13.1",
-    "react-redux": "^7.2.1",
-    "react-router-dom": "^5.2.0",
-    "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0",
-    "uuid": "^8.3.1"
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^11.2.7",
+    "@testing-library/user-event": "^12.8.3",
+    "@types/jest": "^26.0.24",
+    "@types/node": "^12.20.18",
+    "@types/react": "^17.0.15",
+    "@types/react-dom": "^17.0.9",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-scripts": "4.0.3",
+    "typescript": "^4.3.5",
+    "web-vitals": "^1.1.2"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
