--- a/app/package.json
+++ b/app/package.json
@@ -25,7 +25,11 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "sass": "^1.37.0"
+    "sass": "^1.37.0",
+    "stylelint": "^13.13.1",
+    "stylelint-config-prettier": "^8.0.2",
+    "stylelint-config-standard": "^21.0.0",
+    "stylelint-scss": "^3.19.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -33,7 +37,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint:js": "npx eslint . --ext .js,.jsx,.ts,.tsx",
-    "lint:js:fix": "npx eslint . --ext .js,.jsx,.ts,.tsx --fix"
+    "lint:js:fix": "npx eslint . --ext .js,.jsx,.ts,.tsx --fix",
+    "lint:style": "npx stylelint \"**/*.{scss,sass,css}\" --ignore-path .gitignore"
   },
   "eslintConfig": {
     "extends": [
