--- a/app/package.json
+++ b/app/package.json
@@ -7,6 +7,7 @@
     "@reduxjs/toolkit": "^1.6.1",
     "antd": "^4.16.9",
     "axios": "^0.21.1",
+    "formik": "^2.2.9",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
